# Status-Signal

./: .gitignore  DESIGN.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
config/: defaults.json
scripts/: fetch-ffmpeg.mjs  gen-icons.mjs
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  encode.rs  ffmpeg.rs  lib.rs  main.rs  probe.rs
src/lib/: api.js  format.js
